// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Render 1`] = `
<DocumentFragment>
  <div
    data-testid="test-component"
  >
    <div>
      guestCount: 1
    </div>
    <div>
      all guests: [{"name":"austin","message":"info loaded","visitDate":"2023","website":"www.example.com"}]
    </div>
    <div>
      name: austin
    </div>
    <div>
      message: info loaded
    </div>
    <div>
      visitDate: 2023
    </div>
    <div>
      website: www.example.com
    </div>
  </div>
</DocumentFragment>
`;

exports[`Data Provider Rejects 1`] = `
<DocumentFragment>
  <div
    data-testid="test-component"
  >
    <div>
      guestCount: 0
    </div>
    <div>
      all guests: []
    </div>
    <div>
      name: undefined
    </div>
    <div>
      message: undefined
    </div>
    <div>
      visitDate: undefined
    </div>
    <div>
      website: undefined
    </div>
  </div>
</DocumentFragment>
`;
